# unsafelib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/unsafe_python/: __init__.py  context.py
src/unsafelib/: __init__.py  core.py  exceptions.py
tests/: test_context.py  test_core_utils.py  test_exceptions.py  test_fakeobj.py  test_getmem.py  test_heap_groom.py  test_rop.py  test_setrip.py
