[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unsafe-python"
version = "0.1.0"
description = "Memory-unsafe operations in pure CPython via LOAD_CONST OOB exploit, wrapped in safe context managers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "unsafe-python contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mamaetyev/unsafe-python"
Repository = "https://github.com/mamaetyev/unsafe-python"
Issues = "https://github.com/mamaetyev/unsafe-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unsafe_python"]

[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
